--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,57 @@
-body {
-    background-color: #646464;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-div {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 0.1px;
-    padding-bottom: 0.1px;
-    margin:0 auto;
-    background-color: #F0F0F0;
-    border-radius: 10px;
-    width: calc(750px);
-    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.5);
-}
-
-li a{
-    color: black;
+* {
+    box-sizing: border-box;
+  }
+  
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  [class*="col-"] {
+    float: left;
+    padding: 15px;
+  }
+  
+  html {
+    font-family: "Lucida Sans", sans-serif;
+    background-color: #D0D4CA;
+  }
+  
+  .header {
+    background-color: #555843;
+    color: #ffffff;
+    padding: 15px;
+  }
+  
+  li a {
     text-decoration: none;
+    color: black;
     font-weight: 900;
-}
-
-li {
-    padding: 0px 15px 0px 15px;
+  }
+  
+  .menu ul {
+    color: black;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .menu li {
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: #F5EEC8;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  
+  .menu li {
     position: relative;
-    display: inline-block;
     transition: 0.5s;
     cursor: pointer;
-}
-
-li::after {
+  }
+  
+  .menu li::after {
     position: absolute;
     content: "";
     width: 100%;
@@ -39,36 +61,67 @@ li::after {
     transition: transform 0.5s;
     transform: scaleX(0);
     transform-origin: right;
-    background-color: #522A84;
-}
-
-li:hover {
-    color: black;
-}
-
-li:hover::after {
+    background-color: #555843;
+  }
+  
+  .para1 {
+    background-color: #F5EEC8;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  
+  .menu li:hover::after {
     transform: scaleX(1);
     transform-origin: left;
-}
-
-.box {
-    margin-top: 20px;
-    padding: 10px;
-}
-
-.nevbar {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    width: calc(100%);
-}
-
-h1 , h2 {
-    font-size: 30px;
+  }
+  
+  .aside {
+    background-color: #F5EEC8;
+    padding: 15px;
     text-align: center;
-}
-
-#para1 {
-    text-align: left;
-    margin-left: 30%;
-}
+    font-size: 14px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  
+  .footer {
+    background-color: #555843;
+    color: #ffffff;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
+  }
+  
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+  
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+  }
